[#407] refactor: Report abstract class 추가